<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="historyAdapter"
            type="com.news.simple_news.adapter.SearchHistoryAdapter" />
        <variable
            name="hotWordAdapter"
            type="com.news.simple_news.adapter.HotKeywordsAdapter" />
        <variable
            name="viewModel"
            type="com.news.simple_news.ui.video.search.VideoSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_hot_words"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title_tip"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/search_hot_keywords_tip"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerView_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            app:adapter="@{hotWordAdapter}"
            app:hotWordList="@{viewModel.hotWordData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tips" />

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/search_hot_keywords_history"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mRecyclerView_hot" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@+id/history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/history"
            app:layout_constraintStart_toEndOf="@id/history"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            app:adapter="@{historyAdapter}"
            app:searchHistoryList="@{viewModel.searchHistoryList}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/history" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
